Upgrade to Java 11 and Cassandra 4.0.10