@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.11</version>
+		<version>2.7.13</version>
 	</parent>
 
 	<groupId>jkml</groupId>
@@ -16,8 +16,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
-		<java.version>1.8</java.version>
-		<cassandra.version>4.0.8</cassandra.version>
+		<java.version>11</java.version>
+		<cassandra.version>4.0.10</cassandra.version>
 		<cassandra-unit.version>4.3.1.0</cassandra-unit.version>
 	</properties>
 
@@ -54,6 +54,12 @@
 			<artifactId>cassandra-all</artifactId>
 			<version>${cassandra.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.ow2.asm</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -74,5 +80,38 @@
 		</dependency>
 
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						<!-- From
+						https://github.com/apache/cassandra/blob/cassandra-4.0.10/conf/jvm11-clients.options -->
+						-Djdk.attach.allowAttachSelf=true
+						
+						--add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+						--add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+						--add-exports java.base/sun.nio.ch=ALL-UNNAMED
+						--add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
+						--add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED
+						--add-exports java.rmi/sun.rmi.server=ALL-UNNAMED
+						--add-exports java.sql/java.sql=ALL-UNNAMED
+						
+						--add-opens java.base/java.lang.module=ALL-UNNAMED
+						--add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+						--add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+						--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+						--add-opens java.base/jdk.internal.math=ALL-UNNAMED
+						--add-opens java.base/jdk.internal.module=ALL-UNNAMED
+						--add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
+						--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+
+	</build>
 
 </project>
